[gd_scene load_steps=5 format=3 uid="uid://cxxejc615wwp5"]

[ext_resource type="Script" path="res://scene/menu/menu_btn/menu_btn.gd" id="1_4bph8"]
[ext_resource type="Texture2D" uid="uid://de7dqg6fww0vb" path="res://scene/menu/menu_btn/bonus.png" id="4_pqfi0"]
[ext_resource type="SpineSkeletonDataResource" uid="uid://bld7of8wgr8cg" path="res://scene/menu/menu_btn/spine/lock/lock.tres" id="6_sod05"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50xma"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="MenuBtn" type="Button"]
offset_left = -103.0
offset_top = -243.0
offset_right = 103.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
script = ExtResource("1_4bph8")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="NameBG" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_top = 83.0
offset_right = 76.0
offset_bottom = 131.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_50xma")

[node name="NameLabel" type="Label" parent="NameBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -21.5
offset_right = 30.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "名稱"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Avatar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="SpineSprite" type="SpineSprite" parent="Avatar"]

[node name="BonusButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -106.0
offset_right = 147.0
offset_bottom = -34.0
grow_vertical = 0
focus_mode = 0
icon = ExtResource("4_pqfi0")
flat = true
expand_icon = true

[node name="Lock" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="SpineSprite" type="SpineSprite" parent="Lock"]
skeleton_data_res = ExtResource("6_sod05")
preview_skin = "default"
preview_animation = "-- Empty --"
preview_frame = false
preview_time = 0.0
